# LITL-Optimization

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg
litl_simulator/: __init__.py  bases.py  data_descriptors.py  exceptions.py  gui.py  settings.py  utils.py
litl_simulator/lidargui/: __init__.py  bases.py  cam_viewport.py  change_cmap.py  custom_widgets.py  data_loader.py  delete_presets.py  error_dialog_wrapper.py  main_app.py  main_widget.py  movie_maker.py  pc_viewport.py  preset_details_viewport.py  process_viewport.py  rename_preset_viewport.py  utils.py  waveforms_viewport.py
litl_simulator/process_pipelines/: __init__.py  bases.py  camera_processors.py  color_processors.py  defaults.py  hitmask_processors.py  intensity_models.py  noise_models.py  pc_projector.py  pipeline.py  thresholding_algorithms.py  utils.py  waveform_modelling.py  waveform_modelling_gpu.py
litl_simulator/simulation/: actor_manager.py  sensor_data_io.py  simulator.py
tutorials/: part1_generate_raw_data.ipynb  part2_process_raw_data.ipynb  part3_gui.ipynb
