[metadata]
name = litl_simulator
description = LiDAR-in-the-loop optimization Simulator.
long_description = file: README.md
license = 
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
author = Felix Antoine Goudreault
author_email = felix.goudreault82@gmail.com
url = https://light.princeton.edu/publication/lidar-in-the-loop-hyperparameter-optimization/

[options]
install_requires =  opencv-python
                    matplotlib
                    numba
                    numpy
                    PyQt5
                    pyqtgraph
                    pyquaternion
                    pyopengl  # for some reason not installed automatically
                    qimage2ndarray
                    qtrangeslider
                    scikit-learn
                    scipy
                    tqdm

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#using-find-namespace-or-find-namespace-packages
packages = find_namespace:

[options.entry_points]
console_scripts =
    lidarsimgui = litl_simulator.gui:main

[flake8]
max-line-length = 120
docstring-convention = google 
